@@ -9,10 +9,15 @@ test_description="munin-node plugins"
 
 
 test_expect_success "request list of configured plugins" '
-  all_plugins=$(printf "%s\\n" list quit | nc localhost munin | grep -v "^#")
+  printf "%s\\n" list quit | nc localhost munin | grep -v "^#" >all_plugins
   # ignore non-predictable names (e.g. related to the network interfaces of the environment)
-  all_without_network_interfaces=$(echo "$all_plugins" | sed "s/ if_\\w\\+//g")
-  [ "$all_without_network_interfaces" = "cpu df df_inode entropy forks fw_packets interrupts irqstats load memory netstat open_files open_inodes proc_pri processes swap threads uptime users vmstat" ]
+  for a in $(sed "s/ if_\\w\\+//g" <all_plugins); do echo "$a"; done >all_without_network_interfaces
+  printf "%s\n" cpu df df_inode entropy forks fw_packets interrupts \
+    irqstats load memory netstat open_files open_inodes proc_pri \
+    processes swap threads uptime users vmstat \
+    >expected_plugins
+  # show diff in case of failure (can be removed after https://github.com/chriscool/sharness/issues/14)
+  test_cmp all_without_network_interfaces expected_plugins
 '
 
 test_done
